--- a/Son/Views/Home/Index.cshtml
+++ b/Son/Views/Home/Index.cshtml
@@ -11,6 +11,10 @@
 
 
 <!--Dưỡng Here-->
-<div>
 
+<div class="card" style="width: 200px">
+    <img class="card-img-top" src="~/Images/img01.jpg" />
+    <div class="card-body">
+        <p class="card-text">abc</p>
+    </div>
 </div>
