--- a/Son/Views/_Shared/_Layout.cshtml
+++ b/Son/Views/_Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
         <link href="~/lib/Font-Awesome/web-fonts-with-css/css/fontawesome-all.css" rel="stylesheet" />
+        <link href="~/lib/css/Card-Product.css" rel="stylesheet" />
     </environment>
 </head>
 <body>
