--- a/Son/Views/Home/Index.cshtml
+++ b/Son/Views/Home/Index.cshtml
@@ -3,87 +3,93 @@
     ViewData["Title"] = "Index";
     Layout = "~/Views/_Shared/_Layout.cshtml";
 }
-<!--Tài Here-->
-<div>
+<div class="row">
+    <div class="col-sm"></div>
+    <div class="col-sm-9">
 
-</div>
+        <!--Tài Here-->
+        <div>
 
+        </div>
 
-
-<!--Dưỡng Here-->
-<div id="demo" class="col-7 carousel slide" data-ride="carousel">
-    <div class="carousel-inner bg-primary">
-        @for (int i = 0; i < 3; i++)
-        {
-            var s = "active";
-            if (i == 0)
-            {
-                <div class="carousel-item @s">
-                    <div class="row">
-                        @for (int j = 1; j < 7; j++)
+        <!--Dưỡng Here-->
+        <div class="">
+            <div id="demo" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    @for (int i = 0; i < 3; i++)
+                    {
+                        var s = "active";
+                        if (i == 0)
                         {
-                            <div class="col-md-2" data-toggle="tooltip" title="áo sơ mi nữ trắng thanh lịch">
-                                <div class="card">
-                                    <img class="card-img-top" src="~/Images/img-002.jpg" />
-                                    <div class="card-body bg-light">
-                                        <a class="card-text" style="text-decoration-line: none;" href="#">áo sơ mi nữ trắng thanh lịch</a><br />
-                                        <div>
-                                            <small class="fa fa-eye"> 500</small>
-                                            <div class="float-right">
-                                                <small class="fa fa-star text-warning"></small>
-                                                <small class="fa fa-star text-warning"></small>
-                                                <small class="fa fa-star text-warning"></small>
-                                                <small class="fa fa-star text-warning"></small>
-                                                <small class="fa fa-star-half-alt text-warning"></small>
+                            <div class="carousel-item @s">
+                                <div class="row">
+                                    @for (int j = 1; j < 7; j++)
+                                    {
+                                        <div class="col-md-2" data-toggle="tooltip" title="áo sơ mi nữ trắng thanh lịch">
+                                            <div class="card">
+                                                <img class="card-img-top" src="~/Images/img-002.jpg" />
+                                                <div class="card-body bg-light">
+                                                    <a class="card-text" style="text-decoration-line: none;" href="#">áo sơ mi nữ trắng thanh lịch</a><br />
+                                                    <div>
+                                                        <small class="fa fa-eye"> 500</small>
+                                                        <div class="float-right">
+                                                            <small class="fa fa-star text-warning"></small>
+                                                            <small class="fa fa-star text-warning"></small>
+                                                            <small class="fa fa-star text-warning"></small>
+                                                            <small class="fa fa-star text-warning"></small>
+                                                            <small class="fa fa-star-half-alt text-warning"></small>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <a class="Button-card" href="#">
+                                                    <span class="btn btn-warning float-right" data-toggle="tooltip" title="Thêm vào giỏ hàng"><i class="fa fa-shopping-cart"></i></span>
+                                                </a>
                                             </div>
                                         </div>
-                                    </div>
-                                    <a class="Button-card" href="#">
-                                        <span class="btn btn-warning float-right" data-toggle="tooltip" title="Thêm vào giỏ hàng"><i class="fa fa-shopping-cart"></i></span>
-                                    </a>
+                                    }
                                 </div>
                             </div>
                         }
-                    </div>
-                </div>
-            }
-            <div class="carousel-item">
-                <div class="row">
-                    @for (int j = 1; j < 7; j++)
-                    {
-                        <div class="col-md-2" data-toggle="tooltip" title="áo sơ mi nữ trắng thanh lịch">
-                            <div class="card">
-                                <img class="card-img-top" src="~/Images/img-002.jpg" />
-                                <div class="card-body bg-light">
-                                    <a class="card-text" style="text-decoration-line: none;" href="#">áo sơ mi nữ trắng thanh lịch</a><br />
-                                    <div>
-                                        <small class="fa fa-eye"> 500</small>
-                                        <div class="float-right">
-                                            <small class="fa fa-star text-warning"></small>
-                                            <small class="fa fa-star text-warning"></small>
-                                            <small class="fa fa-star text-warning"></small>
-                                            <small class="fa fa-star text-warning"></small>
-                                            <small class="fa fa-star-half-alt text-warning"></small>
+                        <div class="carousel-item">
+                            <div class="row">
+                                @for (int j = 1; j < 7; j++)
+                                {
+                                    <div class="col-md-2" data-toggle="tooltip" title="áo sơ mi nữ trắng thanh lịch">
+                                        <div class="card">
+                                            <img class="card-img-top" src="~/Images/img-002.jpg" />
+                                            <div class="card-body bg-light">
+                                                <a class="card-text" style="text-decoration-line: none;" href="#">áo sơ mi nữ trắng thanh lịch</a><br />
+                                                <div>
+                                                    <small class="fa fa-eye"> 500</small>
+                                                    <div class="float-right">
+                                                        <small class="fa fa-star text-warning"></small>
+                                                        <small class="fa fa-star text-warning"></small>
+                                                        <small class="fa fa-star text-warning"></small>
+                                                        <small class="fa fa-star text-warning"></small>
+                                                        <small class="fa fa-star-half-alt text-warning"></small>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <a class="Button-card" href="#">
+                                                <span class="btn btn-warning float-right" data-toggle="tooltip" title="Thêm vào giỏ hàng"><i class="fa fa-shopping-cart"></i></span>
+                                            </a>
                                         </div>
                                     </div>
-                                </div>
-                                <a class="Button-card" href="#">
-                                    <span class="btn btn-warning float-right" data-toggle="tooltip" title="Thêm vào giỏ hàng"><i class="fa fa-shopping-cart"></i></span>
-                                </a>
+                                }
                             </div>
                         </div>
                     }
                 </div>
             </div>
-        }
-        
+            <div class="display-4 position-absolute">
+                <a class="text-dark float-left" href="#demo" data-slide="prev">
+                    <i class="fa fa-chevron-circle-left nav-link"></i>
+                </a>
+                <a class="text-dark float-right bg-warning" href="#demo" data-slide="next">
+                    <i class="fa fa-chevron-circle-right nav-link"></i>
+                </a>
+            </div>
+        </div>
     </div>
-    <div class="display-4 bg-light">
-        <a class="text-dark float-left" href="#demo" data-slide="prev">
-            <i class="fa fa-chevron-circle-left nav-link"></i>
-        </a>
-        <a class="text-dark float-right" href="#demo" data-slide="next">
-            <i class="fa fa-chevron-circle-right nav-link"></i>
-        </a>
-    </div>
+    <div class="col-sm"></div>
 </div>
