--- a/Son/Views/Home/Index.cshtml
+++ b/Son/Views/Home/Index.cshtml
@@ -3,41 +3,65 @@
     ViewData["Title"] = "Index";
     Layout = "~/Views/_Shared/_Layout.cshtml";
 }
-<div class="row bg-dark">
+<!--Hearder-->
+
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <form class="form-inline">
+        <div class="input-group">
+            <div class="input-group-prepend">
+                <button class="btn dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">All </button>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="#">Car</a>
+                    <a class="dropdown-item" href="#">Baby</a>
+                    <a class="dropdown-item" href="#">Laptop</a>
+                </div>
+            </div>
+            <input type="text" class="form-control"/>
+            <div class="input-group-append">
+                <span class="input-group-text"><i class="fa fa-search"></i></span>
+            </div>
+        </div>
+    </form>
+</nav>
+
+<!--Body-->
+<div class="row">
     <div class="col-sm"></div>
     <div class="col-sm-9">
 
         <!--Tài Here-->
         <div>
-
+            
         </div>
 
         <!--Dưỡng Here-->
-        <div class="position-relative">
-            <div id="demo" class="carousel slide position-relative" data-ride="carousel">
-                <div class="carousel-inner">
+        <div class="">
+            <div id="demo" class="carousel slide position-relative" data-interval="false" style="height: 350px;">
+                <div class="carousel-inner position-absolute">
                     @for (int i = 0; i < 3; i++)
                     {
                         var s = "active";
+                        var width_card =  1150/6 + "px";
                         if (i == 0)
                         {
                             <div class="carousel-item @s">
-                                <div class="row">
+                                <div class="d-inline-flex">
                                     @for (int j = 1; j < 7; j++)
                                     {
-                                        <div class="col-md-2" data-toggle="tooltip" title="áo sơ mi nữ trắng thanh lịch">
+                                        <div class="mr-2" style="width: @width_card;" data-toggle="tooltip" title="áo sơ mi nữ trắng thanh lịch">
                                             <div class="card">
                                                 <img class="card-img-top" src="~/Images/img-002.jpg" />
-                                                <div class="card-body bg-light">
+                                                <div class="pl-2 pr-2 bg-light">
                                                     <a class="card-text" style="text-decoration-line: none;" href="#">áo sơ mi nữ trắng thanh lịch</a><br />
-                                                    <div>
-                                                        <small class="fa fa-eye"> 500</small>
+                                                    <div class="pt-1" style="font-size: 10px;">
+                                                        <div class="fa fa-eye"> 500</div>
                                                         <div class="float-right">
-                                                            <small class="fa fa-star text-warning"></small>
-                                                            <small class="fa fa-star text-warning"></small>
-                                                            <small class="fa fa-star text-warning"></small>
-                                                            <small class="fa fa-star text-warning"></small>
-                                                            <small class="fa fa-star-half-alt text-warning"></small>
+                                                            <i class="fa fa-star text-warning"></i>
+                                                            <i class="fa fa-star text-warning"></i>
+                                                            <i class="fa fa-star text-warning"></i>
+                                                            <i class="fa fa-star text-warning"></i>
+                                                            <i class="fa fa-star-half-alt text-warning"></i>
+                                                            <span>(6)</span>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -51,22 +75,23 @@
                             </div>
                         }
                         <div class="carousel-item">
-                            <div class="row">
+                            <div class="d-inline-flex">
                                 @for (int j = 1; j < 7; j++)
                                 {
-                                    <div class="col-md-2" data-toggle="tooltip" title="áo sơ mi nữ trắng thanh lịch">
+                                    <div class="mr-2" style="width: @width_card;" data-toggle="tooltip" title="áo sơ mi nữ trắng thanh lịch">
                                         <div class="card">
                                             <img class="card-img-top" src="~/Images/img-002.jpg" />
-                                            <div class="card-body bg-light">
+                                            <div class="pl-2 pr-2 bg-light">
                                                 <a class="card-text" style="text-decoration-line: none;" href="#">áo sơ mi nữ trắng thanh lịch</a><br />
-                                                <div>
-                                                    <small class="fa fa-eye"> 500</small>
+                                                <div class="pt-1" style="font-size: 10px;">
+                                                    <div class="fa fa-eye"> 500</div>
                                                     <div class="float-right">
-                                                        <small class="fa fa-star text-warning"></small>
-                                                        <small class="fa fa-star text-warning"></small>
-                                                        <small class="fa fa-star text-warning"></small>
-                                                        <small class="fa fa-star text-warning"></small>
-                                                        <small class="fa fa-star-half-alt text-warning"></small>
+                                                        <i class="fa fa-star text-warning"></i>
+                                                        <i class="fa fa-star text-warning"></i>
+                                                        <i class="fa fa-star text-warning"></i>
+                                                        <i class="fa fa-star text-warning"></i>
+                                                        <i class="fa fa-star-half-alt text-warning"></i>
+                                                        <span>(6)</span>
                                                     </div>
                                                 </div>
                                             </div>
@@ -80,14 +105,14 @@
                         </div>
                     }
                 </div>
-            </div>
-            <div class="pt-5" style="position: relative;">
-                <a class="float-left bg-white text-center" style="height: 25px; width: 25px; border-radius: 50%;" href="#demo" data-slide="next">
-                    <i class="fa fa-chevron-left"></i>
-                </a>
-                <a class="float-right bg-white text-center" style="height: 25px; width: 25px; border-radius: 50%;" href="#demo" data-slide="next">
-                    <i class="fa fa-chevron-right"></i>
-                </a>
+                <div class="position-absolute" style="height: 50%; bottom: 10px; width:100%;">
+                    <a class="float-left bg-dark text-center" style="height: 25px; width: 25px; border-radius: 50%; margin-left: -15px;" href="#demo" data-slide="next">
+                        <i class="fa fa-chevron-left"></i>
+                    </a>
+                    <a class="float-right bg-dark text-center" style="height: 25px; width: 25px; border-radius: 50%; margin-right: -15px" href="#demo" data-slide="next">
+                        <i class="fa fa-chevron-right"></i>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
