--- a/Son/Views/Home/Index.cshtml
+++ b/Son/Views/Home/Index.cshtml
@@ -4,26 +4,37 @@
     Layout = "~/Views/_Shared/_Layout.cshtml";
 }
 <!--Hearder-->
-
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-    <form class="form-inline">
-        <div class="input-group">
-            <div class="input-group-prepend">
-                <button class="btn dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">All </button>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">Car</a>
-                    <a class="dropdown-item" href="#">Baby</a>
-                    <a class="dropdown-item" href="#">Laptop</a>
+<div class="row" style="background-color: rgb(35,47,62);">
+    <div class="col-sm"></div>
+    <div class="col-sm-9">
+        <nav class="navbar-expand-sm navbar-dark row pt-2">
+            <form class="col-8">
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <button class="btn dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">All </button>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#">Car</a>
+                            <a class="dropdown-item" href="#">Baby</a>
+                            <a class="dropdown-item" href="#">Laptop</a>
+                        </div>
+                    </div>
+                    <input type="text" class="form-control" />
+                    <div class="input-group-append">
+                        <span class="input-group-text"><i class="fa fa-search"></i></span>
+                    </div>
                 </div>
-            </div>
-            <input type="text" class="form-control"/>
-            <div class="input-group-append">
-                <span class="input-group-text"><i class="fa fa-search"></i></span>
-            </div>
-        </div>
-    </form>
-</nav>
-
+            </form>
+            <div class=""><img src="https://images-na.ssl-images-amazon.com/images/G/01/img18/events/otc/gw/otc_swm_landing_b_400x39_t3_v2._CB472720356_.png" /></div>
+        </nav>           
+        <nav class="navbar-expand-sm navbar-dark row pt-2 float-right">
+            <form class="row text-white position-relative">
+                <h4 class=""><i class="fa fa-shopping-cart text-warning"></i></h4>
+                <b class="small">0</b>
+            </form>
+        </nav>
+    </div>
+    <div class="col-sm"></div>
+</div>
 <!--Body-->
 <div class="row">
     <div class="col-sm"></div>
