--- a/Son/Views/_Shared/_Layout.cshtml
+++ b/Son/Views/_Shared/_Layout.cshtml
@@ -17,6 +17,7 @@
         <script src="~/lib/popper.js/dist/umd/popper.min.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
         <script src="~/lib/angular/angular.min.js"></script>
+        <script src="~/lib/scripts/owl.carousel.js"></script>
     </environment>
 </body>
 </html>
