--- a/Son/Views/Home/Index.cshtml
+++ b/Son/Views/Home/Index.cshtml
@@ -5,14 +5,14 @@
 }
 <!--Hearder-->
 @await Html.PartialAsync("Header");
-
+<!--Body-->
 <div class="row">
     <div class="col-sm"></div>
     <div class="col-sm-9">
 
-        <!--Catagory-->
+        <!--Caroulse Catagory-->
         @await Html.PartialAsync("Category")
-        <!--Body-->
+        <!--Caroulse Products-->
         @await Html.PartialAsync("CarouselProducts")
 
     </div>
