--- a/Son/Views/_Shared/_Layout.cshtml
+++ b/Son/Views/_Shared/_Layout.cshtml
@@ -8,16 +8,19 @@
         <link href="~/lib/css/Card-Product.css" rel="stylesheet" />
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
         <link href="~/lib/Font-Awesome/web-fonts-with-css/css/fontawesome-all.css" rel="stylesheet" />
+        <link href="~/lib/css/slick-theme.css" rel="stylesheet" />
+        <link href="~/lib/css/slick.css" rel="stylesheet" />
+        <link href="~/lib/css/Category.css" rel="stylesheet" />
     </environment>
-</head>
-<body>
-    @RenderBody()
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.min.js"></script>
         <script src="~/lib/popper.js/dist/umd/popper.min.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
         <script src="~/lib/angular/angular.min.js"></script>
-        <script src="~/lib/scripts/owl.carousel.js"></script>
+        <script src="~/lib/scripts/slick.js"></script>
     </environment>
+</head>
+<body>
+    @RenderBody()
 </body>
 </html>
