--- a/Son/Views/Home/CarouselProducts.cshtml
+++ b/Son/Views/Home/CarouselProducts.cshtml
@@ -1,88 +1,37 @@
-﻿<!--Tài Here-->
-<div>
+﻿@*Catagory*@
 
-</div>
-
-<!--Dưỡng Here-->
-<div class="pt-5">
-    <div class=""><a href="#" style="text-decoration-line:none;"><b>See More...</b></a></div>
-    <div id="demo" class="carousel slide position-relative" data-interval="false" style="height: 350px;">
-        <div class="carousel-inner position-absolute">
-            @for (int i = 0; i < 3; i++)
-            {
-                var s = "active";
-                var width_card = 1150 / 6 + "px";
-                if (i == 0)
-                {
-                    <div class="carousel-item @s">
-                        <div class="d-inline-flex">
-                            @for (int j = 1; j < 7; j++)
-                            {
-                                <div class="mr-2" style="width: @width_card;" data-toggle="tooltip" title="áo sơ mi nữ trắng thanh lịch">
-                                    <div class="card">
-                                        <img class="card-img-top" src="~/Images/img-002.jpg" />
-                                        <div class="pl-2 pr-2 bg-light">
-                                            <a class="card-text" style="text-decoration-line: none;" href="#">áo sơ mi nữ trắng thanh lịch</a><br />
-                                            <div class="pt-1" style="font-size: 10px;">
-                                                <div class="fa fa-eye"> 500</div>
-                                                <div class="float-right">
-                                                    <i class="fa fa-star text-warning"></i>
-                                                    <i class="fa fa-star text-warning"></i>
-                                                    <i class="fa fa-star text-warning"></i>
-                                                    <i class="fa fa-star text-warning"></i>
-                                                    <i class="fa fa-star-half-alt text-warning"></i>
-                                                    <span>(6)</span>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <a class="Button-card" href="#">
-                                            <span class="btn btn-warning float-right" data-toggle="tooltip" title="Thêm vào giỏ hàng"><i class="fa fa-shopping-cart"></i></span>
-                                        </a>
-                                    </div>
-                                </div>
-                            }
-                        </div>
-                    </div>
-                }
-                <div class="carousel-item">
-                    <div class="d-inline-flex">
-                        @for (int j = 1; j < 7; j++)
-                        {
-                            <div class="mr-2" style="width: @width_card;" data-toggle="tooltip" title="áo sơ mi nữ trắng thanh lịch">
-                                <div class="card">
-                                    <img class="card-img-top" src="~/Images/img-002.jpg" />
-                                    <div class="pl-2 pr-2 bg-light">
-                                        <a class="card-text" style="text-decoration-line: none;" href="#">áo sơ mi nữ trắng thanh lịch</a><br />
-                                        <div class="pt-1" style="font-size: 10px;">
-                                            <div class="fa fa-eye"> 500</div>
-                                            <div class="float-right">
-                                                <i class="fa fa-star text-warning"></i>
-                                                <i class="fa fa-star text-warning"></i>
-                                                <i class="fa fa-star text-warning"></i>
-                                                <i class="fa fa-star text-warning"></i>
-                                                <i class="fa fa-star-half-alt text-warning"></i>
-                                                <span>(6)</span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <a class="Button-card" href="#">
-                                        <span class="btn btn-warning float-right" data-toggle="tooltip" title="Thêm vào giỏ hàng"><i class="fa fa-shopping-cart"></i></span>
-                                    </a>
-                                </div>
-                            </div>
-                        }
-                    </div>
+<section class="list-products slider">
+    @for (int j = 0; j < 12; j++)
+    {
+        <div class="" title="">
+            <div>
+                <img class="card-img-top" src="~/Images/img-002.jpg" />
+                <span class="btn btn-warning position-absolute" style="font-size: 20%;" data-toggle="tooltip" title="Thêm vào gi? hàng"><i class="fa fa-shopping-cart"></i></span>
+            </div>
+            <div class="text-center">
+                <a class="card-text" style="text-decoration-line: none;" href="#">áo so mi trắng thanh lịch</a><br />
+            </div>
+            <div class="pt-1 pl-1 pr-1" style="font-size: 10px;">
+                <div class="fa fa-eye"> 500</div>
+                <div class="float-right">
+                    <i class="fa fa-star text-warning"></i>
+                    <i class="fa fa-star text-warning"></i>
+                    <i class="fa fa-star text-warning"></i>
+                    <i class="fa fa-star text-warning"></i>
+                    <i class="fa fa-star-half-alt text-warning"></i>
+                    <span>(6)</span>
                 </div>
-            }
+            </div>
         </div>
-        <div class="position-absolute" style="height: 50%; bottom: 10px; width:100%;">
-            <a class="float-left bg-dark text-center" style="height: 25px; width: 25px; border-radius: 50%; margin-left: -15px;" href="#demo" data-slide="next">
-                <i class="fa fa-chevron-left"></i>
-            </a>
-            <a class="float-right bg-dark text-center" style="height: 25px; width: 25px; border-radius: 50%; margin-right: -15px" href="#demo" data-slide="next">
-                <i class="fa fa-chevron-right"></i>
-            </a>
-        </div>
-    </div>
-</div>
-
+    }
+</section>
+<script type="text/javascript">
+    $(function () {
+        $(".list-products").slick({
+            dots: true,
+            infinite: false,
+            slidesToShow: 6,
+            slidesToScroll: 2
+        });
+    });
+</script>
