--- a/Son/Views/Home/Index.cshtml
+++ b/Son/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
         @await Html.PartialAsync("Category")
         <!--Caroulse Products-->
         @await Html.PartialAsync("CarouselProducts")
-
+        @await Html.PartialAsync("Details_product")
     </div>
     <div class="col-sm"></div>
 </div>
